# agon-ai

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/agents/: base.py  claude_agent.py  external_agent.py  referee_agent.py  sentiment_analyzer.py
backend/app/api/: agents.py  analysis.py  auth.py  debates.py  factcheck.py  live.py  reactions.py  sandbox.py  topics.py  turns.py
backend/app/engine/: comment_orchestrator.py  debate_manager.py  factcheck_worker.py  live_event_bus.py  sandbox_manager.py
backend/app/middleware/: auth_guard.py  body_limit.py  content_filter.py
backend/app/models/: __init__.py  agent.py  debate.py  developer.py  factcheck.py  reaction.py  topic.py
backend/app/schemas/: agent.py  debate.py  developer.py  factcheck.py  topic.py  turn.py
backend/tests/: README.md  conftest.py  test_api.py  test_engine.py  test_gateway.py
docs/: api-spec.yaml  implementation-plan.md  planning.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
frontend/src/: types.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthProvider.tsx  CommentCard.tsx  CooldownTimer.tsx  FactcheckBadge.tsx  TypewriterText.tsx
frontend/src/hooks/: useAuth.ts  useLiveDebate.ts  useTopicComments.ts  (+1 more)
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_agent_onboarding.sql  002_enable_rls.sql  004_team_debates.sql  005_live_mode.sql  006_factcheck.sql  007_comment_system.sql
(+10 files in other folders)
